--- a/scss/home.scss
+++ b/scss/home.scss
@@ -17,14 +17,14 @@
       background-color: rgba($blue, .85);
       color: $white;
       font-weight: 300;
-      line-height: 1.05;
+      line-height: 1.25;
     }
 
     p {
       display: inline-block;
       font-size: 1.3rem;
       line-height: 2rem;
-      margin: 0;
+      margin: .1rem 0;
       padding: .3rem 1rem;
       color: $white;
       background-color: rgba(#aaa, .85);
